[package]
name = "simpl_actor"
description = "Simple tokio actors"
version = "0.1.2"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["actor", "macro", "tokio"]

[dependencies]
simpl_actor_macros = { path = "../simpl_actor_macros", version = "0.1.2" }

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
